--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "mongoose": "^6.1.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
     "nodemailer-sendgrid-transport": "^0.2.0"
